syntax = "proto3";
package ProtoMessage;
option java_package = "org.mmo.message";
option go_package = "src/message";

//玩家

//用户登录
message UserLoginRequest {
  string account = 1; //账号
  string password = 2; //密码
}
//用户登录
message UserLoginResponse {
  int64 playerId = 1; //玩家id
}


